# gunk

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  docker-build-linux.sh  notes.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
Presets/Factory/: Default.jqgpreset  Envelope Down.jqgpreset  Funky Wah.jqgpreset  Glide Machine.jqgpreset  Pitch Track.jqgpreset  Sub Rumble.jqgpreset  Thick Saw.jqgpreset  Wide Chorus.jqgpreset
Source/: CombinedOscSectionComponent.cpp  CombinedOscSectionComponent.h  EnvelopeDisplayComponent.h  EnvelopeSectionComponent.h  Filter.h  FilterDisplayComponent.cpp  FilterDisplayComponent.h  FilterEngine.h  FilterSectionComponent.cpp  FilterSectionComponent.h  GateDisplayComponent.h  GateSectionComponent.cpp  GateSectionComponent.h  GlideEngine.h  LFODisplayComponent.h  LFOEngine.h  LFOSectionComponent.h  LabelledSectionComponent.h  LookAndFeel.h  ModMatrix.h  ModMatrixComponent.cpp  ModMatrixComponent.h  OscSectionComponent.cpp  OscSectionComponent.h  Oscillator.cpp  Oscillator.h  OutputSectionComponent.h  ParamFormatters.h  ParameterIDs.h  PitchDetector.cpp  PitchDetector.h  PlaceholderSectionComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SubOscSectionComponent.h  TransientPlayer.h  (+3 more)
Wavetables/Surge/: NOTICE
Wavetables/WaveMorphs/: 2.wt  3.wt
cmake/: Toolchain-mingw-w64.cmake  vst3_manifest_wrapper.sh.in
docker/: Dockerfile.linux-build
docs/: mod-matrix.md
packaging/: macos-install.txt  windows-install.txt
